--- a/src/components/app/app.sass
+++ b/src/components/app/app.sass
@@ -1,2 +1,9 @@
 body
   background-color: #f5f5f5
+
+.content-center
+    height: 100vh
+    display: flex
+    justify-content: space-evenly
+    align-items: center
+    flex-direction: column
