Разделение на подкомпоненты

--- a/src/components/sidebar/sidebar.sass
+++ b/src/components/sidebar/sidebar.sass
@@ -35,7 +35,7 @@
     .user-info
       display: flex
       align-items: center
-      justify-content: space-around
+      justify-content: space-evenly
 
       &__avatar
         max-width: 100px
@@ -48,3 +48,5 @@
         &-name
           color: black
         &-created
+          display: flex
+          flex-direction: column
